# multi-dict

./: CMakeLists.txt  README.md  main.c  makefile  test.sh  time_test.sh
Avl_Tree_lib/: avl_tree.c  avl_tree.h
Input_Preprocessing/: preprocessing.c  preprocessing.h
Input_Processing/: input.c  input.h  processing.c  processing.h
Output_Processing/: output.c  output.h
dir/: example1.out
tests/: czas
